--- a/templates/conventions/recapitulatif/resiliation.html
+++ b/templates/conventions/recapitulatif/resiliation.html
@@ -14,6 +14,7 @@
                     {% include "common/display_field_if_exists.html" with label="Date de la résiliation demandée" value=convention.date_resiliation object_field="convention__date_resiliation__"|add:convention_uuid %}
                     {% include "common/display_textfield_if_exists.html" with label="Motif de la résiliation" value=convention.motif_resiliation object_field="convention__motif_resiliation__"|add:convention_uuid %}
                     {% include "common/display_text_and_files_if_exists.html" with label="Commentaires à l'attention de l'instructeur" text=convention.commentaires|get_text_from_textfiles file_list=convention.commentaires|get_files_from_textfiles %}
+                    {% include "common/display_text_and_files_if_exists.html" with label="Acte administratif (arrêté)" file_list=convention.fichier_instruction_resiliation|get_files_from_textfiles %}
                 </div>
             </div>
         </div>
