--- a/templates/conventions/resiliation.html
+++ b/templates/conventions/resiliation.html
@@ -21,6 +21,11 @@
                 <div class="fr-col-12 fr-mb-4w">
                     {% include "common/form/input_upload.html" with form_input=form.commentaires form_input_files=form.commentaires_files object_name='convention' object_uuid=convention.uuid file_list=convention.commentaires|get_files_from_textfiles textarea=True verticalDisplay=True object_field="convention__commentaires__"|add:form.uuid.value %}
                 </div>
+                {% if request.user.is_instructeur_departemental %}
+                    <div class="fr-col-12 fr-mb-4w">
+                        {% include "common/form/input_upload.html" with form_input=form.fichier_instruction_resiliation form_input_files=form.fichier_instruction_resiliation_files object_name='convention' object_uuid=convention.uuid file_list=convention.fichier_instruction_resiliation|get_files_from_textfiles object_field="convention__fichier_instruction_resiliation__"|add:form.uuid.value %}
+                    </div>
+                {% endif %}
                 {% include "conventions/common/form_footer_button.html" %}
             </div>
         </form>
