--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -97,22 +97,19 @@
                                                     <b>score: {{ convention.score }}</b>
                                                 </div>
                                                 <div>
-                                                    programme nom: {{ convention.programme_nom_similarity }}
+                                                    op. nom (vector): {{ convention.search_vector_programme_nom_rank }}
                                                 </div>
                                                 <div>
-                                                    programme ville: {{ convention.programme_ville_similarity }}
-                                                </div>
-                                                <div>
-                                                    programme numero: {{ convention.programme_numero_similarity }}
-                                                </div>
-                                                <div>
-                                                    bailleur nom: {{ convention.bailleur_nom_similarity }}
-                                                </div>
-                                                <div>
-                                                    bailleur siret: {{ convention.bailleur_siret_similarity }}
+                                                    op. numero: {{ convention.programme_numero_similarity }}
                                                 </div>
                                                 <div>
                                                     conv numero: {{ convention.conv_numero_similarity }}
+                                                </div>
+                                                <div>
+                                                    op. ville: {{ convention.programme_ville_similarity }}
+                                                </div>
+                                                <div>
+                                                    op. code postal: {{ convention.programme_code_postal_similarity }}
                                                 </div>
                                             </td>
                                         {% endif %}
@@ -141,7 +138,7 @@
                                         {% if request|is_instructeur %}
                                             <td>
                                                 {% if new_search %}
-                                                    {{convention.programme.bailleur|highlight_if_match:search_bailleur}}
+                                                    {{convention.programme.bailleur}}
                                                 {% else %}
                                                     {{convention.programme.bailleur|highlight:search_input}}
                                                 {% endif %}
@@ -154,7 +151,7 @@
                                             <div class="apilos--flex-row-left-center">
                                                 <strong class="apilos--overflow_ellipsis">
                                                     {% if new_search %}
-                                                        {{convention.programme|highlight_if_match:search_operation_nom}}
+                                                        {{convention.programme|highlight_if_match:request.GET.search_operation_nom}}
                                                     {% else %}
                                                         {{convention.programme|highlight:search_input}}
                                                     {% endif %}
@@ -167,7 +164,7 @@
                                                 <div>
                                                     <em data-test-role="programme-galion-cell">
                                                         {% if new_search %}
-                                                            Op. : {{convention.programme.numero_galion|highlight_if_match:search_numero}}
+                                                            Op. : {{convention.programme.numero_galion|highlight_if_match:request.GET.search_numero}}
                                                         {% else %}
                                                             Op. : {{convention.programme.numero_galion|highlight:search_input}}
                                                         {% endif %}
@@ -179,7 +176,7 @@
                                                     {% if convention.numero %}
                                                         <em data-test-role="programme-galion-cell">
                                                             {% if new_search %}
-                                                                Conv. : {{convention.numero|highlight_if_match:search_numero}}
+                                                                Conv. : {{convention.numero|highlight_if_match:request.GET.search_numero}}
                                                             {% else %}
                                                                 Conv. : {{convention.numero|highlight:search_input}}
                                                             {% endif %}
@@ -192,7 +189,7 @@
                                         <td>
                                             <strong>
                                                 {% if new_search %}
-                                                    {{convention.programme.ville|highlight_if_match:search_lieu}}
+                                                    {{convention.programme.ville|highlight_if_match:request.GET.search_lieu}}
                                                 {% else %}
                                                     {{convention.programme.ville|highlight:search_input}}
                                                 {% endif %}
@@ -200,7 +197,7 @@
                                             <br/>
                                             <em>
                                                 {% if new_search %}
-                                                    {{convention.programme.code_postal|highlight_if_match:search_lieu}}
+                                                    {{convention.programme.code_postal|highlight_if_match:request.GET.search_lieu}}
                                                 {% else %}
                                                     {{convention.programme.code_postal|highlight:search_input}}
                                                 {% endif %}
