--- a/templates/conventions/convention_list_filters_new.html
+++ b/templates/conventions/convention_list_filters_new.html
@@ -20,13 +20,13 @@
                     {# Champs nom de l'opération #}
                     <div class="fr-col-12 fr-col-lg-6 fr-mb-4w">
                         <div class="select-label">Nom de l'opération</div>
-                        <input class="fr-input fr-mt-1w" type="search" id="search_operation_nom" name="search_operation_nom" value="{{ search_operation_nom }}" placeholder="Rechercher"/>
+                        <input class="fr-input fr-mt-1w" type="search" id="search_operation_nom" name="search_operation_nom" value="{{ request.GET.search_operation_nom }}" placeholder="Rechercher"/>
                     </div>
 
                     {# Champs numéro de l'opération ou de la convention #}
                     <div class="fr-col-12 fr-col-lg-6 fr-mb-4w">
                         <div class="select-label">Numéro de l'opération ou de la convention</div>
-                        <input class="fr-input fr-mt-1w" type="search" id="search_numero" name="search_numero" value="{{ search_numero }}" placeholder="Rechercher"/>
+                        <input class="fr-input fr-mt-1w" type="search" id="search_numero" name="search_numero" value="{{ request.GET.search_numero }}" placeholder="Rechercher"/>
                     </div>
 
                 </div>
@@ -34,15 +34,46 @@
                 <div class="fr-grid-row fr-grid-row--gutters">
 
                     {# Champs bailleur #}
-                    <div class="fr-col-12 fr-col-lg-6 fr-mb-4w">
-                        <div class="select-label">Bailleur (nom ou SIREN)</div>
-                        <input class="fr-input fr-mt-1w" type="search" id="search_bailleur" name="search_bailleur" value="{{ search_bailleur }}" placeholder="Rechercher"/>
-                    </div>
+                    {% if bailleur_query %}
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-4w">
+                            <div class="select-label">Bailleur (nom ou SIREN)</div>
+                            <div class="fr-mt-1w">
+                                {% url 'users:search_bailleur' as search_bailleur_url %}
+                                <select class="fr-select" name="bailleur" id="search-field-bailleur">
+                                    {% if request.GET.bailleur %}
+                                        <option selected value="{{ request.GET.bailleur }}">{% bailleur_from request.GET.bailleur %}</option>
+                                        {% endwith }
+                                    {% else %}
+                                        <option selected value>Bailleur</option>
+                                        {% for bailleur in bailleur_query %}
+                                            <option value="{{ bailleur.uuid }}">
+                                                {{ bailleur }}
+                                            </option>
+                                        {% endfor %}
+                                    {% endif %}
+                                </select>
+                            </div>
+                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                VirtualSelect.init({
+                                    ele: '#search-field-bailleur',
+                                    search: true,
+                                    placeholder: "Rechercher",
+                                    selectedValue: null,
+                                    searchPlaceholderText: "Nom du bailleur ( SIREN )",
+                                    onServerSearch: function (search, select) {
+                                        fetch('{{ search_bailleur_url }}?q=' + search)
+                                            .then((response) => response.json())
+                                            .then(data => select.setServerOptions(data));
+                                    },
+                                });
+                            </script>
+                        </div>
+                    {% endif %}
 
                     {# Champs commune #}
                     <div class="fr-col-12 fr-col-lg-6 fr-mb-4w">
                         <div class="select-label">Commune, code postal</div>
-                        <input class="fr-input fr-mt-1w" type="search" id="search_lieu" name="search_lieu" value="{{ search_lieu }}" placeholder="Rechercher"/>
+                        <input class="fr-input fr-mt-1w" type="search" id="search_lieu" name="search_lieu" value="{{ request.GET.search_lieu }}" placeholder="Rechercher"/>
                     </div>
 
                 </div>
@@ -51,7 +82,7 @@
 
                     {# Champs statut #}
                     <div class="fr-col-12 fr-col-lg-3 fr-mb-2w search-select">
-                        <div class="select-label">Statut de la convention</div>
+                        <div class="select-label">Statut</div>
                         <select
                             multiple
                             class="fr-select fr-mt-1w"
