--- a/templates/conventions/convention_list_filters_new.html
+++ b/templates/conventions/convention_list_filters_new.html
@@ -35,7 +35,7 @@
 
                     {# Champs bailleur #}
                     {% if bailleur_query %}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-4w">
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-4w search-select">
                             <div class="select-label">Bailleur (nom ou SIREN)</div>
                             <div class="fr-mt-1w">
                                 {% url 'users:search_bailleur' as search_bailleur_url %}
