--- a/templates/conventions/_partial/create_action.html
+++ b/templates/conventions/_partial/create_action.html
@@ -1,10 +1,10 @@
 <div class="fr-mr-3w">
-    <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:new_convention' %}">
+    <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary" href="{% url 'conventions:new_convention' %}">
         Créer une convention ANRU
     </a>
 </div>
 <div>
-    <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
+    <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--tertiary" href="{% url 'conventions:new_avenant_start' %}">
         Créer un avenant
     </a>
 </div>
