--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -166,7 +166,7 @@
                                                     {% endif %}
                                                 </strong>
                                                 {% if convention.is_avenant %}
-                                                    <span class="{% if convention.is_denonciation %}warning-notification {% else %}text-title-blue-france {% endif %} fr-p-1w fr-ml-1w apilos-tag-avenant background-white">{{convention|display_kind|capfirst}}</span>
+                                                    <span class="{% if convention.is_denonciation %}warning-notification {% else %}text-title-blue-france {% endif %} fr-p-1w fr-ml-1w apilos-tag-avenant background-white">{{convention|display_kind_with_numero|capfirst}}</span>
                                                 {% endif %}
                                             </div>
                                             {% if convention.programme.numero_galion %}
