--- a/static/css/main.css
+++ b/static/css/main.css
@@ -812,6 +812,14 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
   background-image: url("/static/img/ecoloweb.svg");
 }
 
+.apilos-inline-block {
+  display: inline-block;
+}
+
+.apilos-italic {
+  font-style: italic;
+}
+
 /*
  * End display convention status
  */
